--- a/sansa-spark-cli/pom.xml
+++ b/sansa-spark-cli/pom.xml
@@ -41,6 +41,11 @@
         </dependency>
 
         <dependency>
+            <groupId>org.aksw.jenax</groupId>
+            <artifactId>jenax-arq-picocli</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.aksw.commons</groupId>
             <artifactId>aksw-commons-models-csvw-picocli</artifactId>
         </dependency>
