--- a/pom.xml
+++ b/pom.xml
@@ -23,8 +23,8 @@
 
     <licenses>
         <license>
-            <name>GNU GENERAL PUBLIC LICENSE, Version 3</name>
-            <url>http://www.gnu.org/licenses/gpl-3.0.txt</url>
+            <name>Apache License 2.0</name>
+            <url>https://www.apache.org/licenses/</url>
             <distribution>repo</distribution>
         </license>
     </licenses>
