--- a/sansa-datalake/sansa-datalake-spark/pom.xml
+++ b/sansa-datalake/sansa-datalake-spark/pom.xml
@@ -24,9 +24,14 @@
 		<dependency>
 			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-hive_${scala.binary.version}</artifactId>
-			<scope>compile</scope>
+			<!-- <scope>compile</scope> -->
 		</dependency>
 
+
+	<dependency>
+                <groupId>org.apache.hadoop</groupId>
+		<artifactId>hadoop-common</artifactId>
+	</dependency>
 		<!-- Scala -->
 		<dependency>
 			<groupId>org.scala-lang</groupId>
