--- a/sansa-spark-cli/pom.xml
+++ b/sansa-spark-cli/pom.xml
@@ -34,6 +34,10 @@
     -->
 
     <dependencies>
+            <dependency>
+                <groupId>org.apache.spark</groupId>
+                <artifactId>spark-sql_${scala.binary.version}</artifactId>
+            </dependency>
 
         <dependency>
             <groupId>info.picocli</groupId>
