--- a/pom.xml
+++ b/pom.xml
@@ -156,7 +156,8 @@
         <module>sansa-inference</module>
         <module>sansa-ml</module>
         <module>sansa-examples</module>
-        <module>sansa-integration-tests</module>
+	<module>sansa-integration-tests</module>
+	<module>sansa-spark-cmds</module>
         <module>sansa-spark-cli</module>
         <module>sansa-bench-spark</module>
         <module>sansa-pkg-parent</module>
@@ -200,6 +201,12 @@
                 <artifactId>kryo</artifactId>
                 <version>4.0.2</version>
             </dependency>
+
+	            <dependency>
+            <groupId>${project.groupId}</groupId>
+	    <artifactId>sansa-spark-cmds_${scala.binary.version}</artifactId>
+<version>${project.version}</version>
+        </dependency>
 
             <dependency>
                 <groupId>net.sansa-stack</groupId>
