--- a/sansa-spark-jena-java/pom.xml
+++ b/sansa-spark-jena-java/pom.xml
@@ -25,25 +25,25 @@
             </plugin>
         </plugins>
     </build>
-<!--
-    <properties>
-        <timestamp>${maven.build.timestamp}</timestamp>
-        <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
-    </properties>
--->
-<!--
-    <build>
-        <resources>
-            <resource>
-                <directory>src/main/resources</directory>
-            </resource>
-            <resource>
-                <directory>src/main/resources-filtered</directory>
-                <filtering>true</filtering>
-            </resource>
-        </resources>
-    </build>
--->
+    <!--
+        <properties>
+            <timestamp>${maven.build.timestamp}</timestamp>
+            <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
+        </properties>
+    -->
+    <!--
+        <build>
+            <resources>
+                <resource>
+                    <directory>src/main/resources</directory>
+                </resource>
+                <resource>
+                    <directory>src/main/resources-filtered</directory>
+                    <filtering>true</filtering>
+                </resource>
+            </resources>
+        </build>
+    -->
 
     <dependencies>
 
@@ -62,6 +62,10 @@
             <artifactId>jenax-analytics-core</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.aksw.jenax</groupId>
+            <artifactId>jenax-io-json</artifactId>
+        </dependency>
 
         <!--
                 <dependency>
