Renamed cmds package

--- a/pom.xml
+++ b/pom.xml
@@ -95,7 +95,7 @@
         <module>sansa-ml</module>
         <module>sansa-examples</module>
         <module>sansa-integration-tests</module>
-        <module>sansa-spark-cmds</module>
+        <module>sansa-cmds-picocli</module>
         <module>sansa-spark-cli</module>
         <module>sansa-bench-spark</module>
         <module>sansa-pkg-parent</module>
