--- a/sansa-query/sansa-query-spark/pom.xml
+++ b/sansa-query/sansa-query-spark/pom.xml
@@ -17,16 +17,9 @@
     <dependencies>
 
         <dependency>
-            <groupId>org.aksw.r2rml</groupId>
-            <artifactId>rml-jena-arq</artifactId>
-            <version>4.8.0-1-SNAPSHOT</version>
+            <groupId>net.sansa-stack</groupId>
+            <artifactId>sansa-sabine${scala.version.suffix}</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.aksw.jenax</groupId>
-            <artifactId>jenax-arq-plugins-bundle</artifactId>
-            <version>4.8.0-1-SNAPSHOT</version>
-        </dependency>
-
 
         <dependency>
             <groupId>${project.groupId}</groupId>
