--- a/sansa-spark-cli/pom.xml
+++ b/sansa-spark-cli/pom.xml
@@ -33,13 +33,23 @@
         </build>
     -->
 
-	<dependencies>
+    <dependencies>
         <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>sansa-cmds-picocli_${scala.binary.version}</artifactId>
+            <groupId>net.sansa-stack</groupId>
+            <artifactId>sansa-cmds-picocli${scala.version.suffix}</artifactId>
         </dependency>
 
-	<dependency>
+        <dependency>
+            <groupId>net.sansa-stack</groupId>
+            <artifactId>sansa-query-spark${scala.version.suffix}</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>net.sansa-stack</groupId>
+            <artifactId>sansa-cmds-picocli${scala.version.suffix}</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
