--- a/sansa-sabine/pom.xml
+++ b/sansa-sabine/pom.xml
@@ -68,25 +68,10 @@
             <artifactId>guava</artifactId>
         </dependency>
 
-
-        <!--
-                <dependency>
-                    <groupId>org.aksw.jenax</groupId>
-                    <artifactId>jena-sparql-api-core</artifactId>
-                </dependency>
-        -->
-
         <dependency>
             <groupId>org.aksw.jenax</groupId>
             <artifactId>jenax-annotations-reprogen</artifactId>
         </dependency>
-
-        <!--
-                <dependency>
-                    <groupId>org.aksw.jena-sparql-api</groupId>
-                    <artifactId>jena-sparql-api-virtuoso</artifactId>
-                </dependency>
-        -->
 
         <dependency>
             <groupId>org.aksw.jenax</groupId>
@@ -103,22 +88,20 @@
             <artifactId>jenax-arq-algebra</artifactId>
         </dependency>
 
-        <!--
-                <dependency>
-                    <groupId>org.aksw.jena-sparql-api</groupId>
-                    <artifactId>jena-sparql-api-views</artifactId>
-                </dependency>
-        -->
-
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>sansa-rdf-common${scala.version.suffix}</artifactId>
+            <artifactId>sansa-spark-jena-java${scala.version.suffix}</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>sansa-rdf-spark${scala.version.suffix}</artifactId>
-        </dependency>
+        <!--        <dependency>-->
+        <!--            <groupId>${project.groupId}</groupId>-->
+        <!--            <artifactId>sansa-rdf-common${scala.version.suffix}</artifactId>-->
+        <!--        </dependency>-->
+
+        <!--        <dependency>-->
+        <!--            <groupId>${project.groupId}</groupId>-->
+        <!--            <artifactId>sansa-rdf-spark${scala.version.suffix}</artifactId>-->
+        <!--        </dependency>-->
 
         <!-- Spark dependencies -->
         <dependency>
@@ -143,6 +126,7 @@
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
         </dependency>
+
         <dependency>
             <groupId>org.scalatest</groupId>
             <artifactId>scalatest_${scala.binary.version}</artifactId>
