--- a/sansa-bom/pom.xml
+++ b/sansa-bom/pom.xml
@@ -77,7 +77,7 @@
         <aksw-commons.version>0.9.5</aksw-commons.version>
         <jena.version>4.8.0</jena.version>
         <jenax.version>4.8.0-1</jenax.version>
-        <rmltk.version>4.8.0-1-SNAPSHOT</rmltk.version>
+        <rmltk.version>4.8.0-1</rmltk.version>
 
         <rdf4j.version>3.3.0</rdf4j.version>
 
