--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>net.sansa-stack</groupId>
         <artifactId>sansa-bom_2.12</artifactId>
-        <version>0.8.0-RC3-SNAPSHOT</version>
+        <version>0.8.0-RC3</version>
         <relativePath>sansa-bom</relativePath>
     </parent>
     <artifactId>sansa-parent_2.12</artifactId>
