--- a/sansa-ml/sansa-ml-common/pom.xml
+++ b/sansa-ml/sansa-ml-common/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<artifactId>sansa-ml-parent_2.12</artifactId>
 		<groupId>net.sansa-stack</groupId>
-		<version>0.8.0-RC4</version>
+		<version>0.8.0-RC5-SNAPSHOT</version>
 	</parent>
 	
 	<name>ML API - Common</name>
