Added developer info to bom

--- a/sansa-bom/pom.xml
+++ b/sansa-bom/pom.xml
@@ -36,6 +36,30 @@
         <tag>HEAD</tag>
     </scm>
 
+	<developers>
+		<developer>
+			<name>Claus Stadler</name>
+			<url>http://aksw.org/ClausStadler</url>
+			<organization>AKSW</organization>
+			<organizationUrl>http://aksw.org</organizationUrl>
+		</developer>
+		<developer>
+			<name>Lorenz Buehmann</name>
+			<url>http://aksw.org/LorenzBuehmann</url>
+			<organization>AKSW</organization>
+			<organizationUrl>http://aksw.org</organizationUrl>
+		</developer>
+		<developer>
+			<name>Carsten Drachner</name>
+		</developer>
+		<developer>
+			<name>Gezim Sejdiu</name>
+		</developer>
+		<developer>
+			<name>Jens Lehmann</name>
+		</developer>
+	</developers>
+
     <issueManagement>
         <url>https://github.com/SANSA-Stack/SANSA-Stack/issues</url>
         <system>GitHub</system>
