moved some shade plugin declaration from the "dist" and "release" profiles to "shade" as they seem to interfere with a standard build

--- a/sansa-sabine/pom.xml
+++ b/sansa-sabine/pom.xml
@@ -145,10 +145,12 @@
 
     <profiles>
         <profile>
-            <id>release</id>
+		<id>shade</id> <!-- was "release", but that that would upload the shaded jar -->
+	<!--
             <properties>
                 <spark.deps.scope>provided</spark.deps.scope>
-            </properties>
+		</properties>
+	-->
             <build>
                 <plugins>
                     <plugin>
