--- a/sansa-query/sansa-query-spark/pom.xml
+++ b/sansa-query/sansa-query-spark/pom.xml
@@ -337,11 +337,14 @@
     </dependencies>
 
     <profiles>
-        <profile>
-            <id>release</id>
+	    <profile>
+		<id>shade</id>
+		<!-- <id>dist</id> -->
+		<!--
             <properties>
                 <spark.deps.scope>provided</spark.deps.scope>
-            </properties>
+			</properties>
+		-->
             <build>
                 <plugins>
                     <plugin>
